fixed header spacing

--- a/style.css
+++ b/style.css
@@ -1,25 +1,29 @@
 body {
   box-sizing: border-box;
   margin: 0;
+  font-family: "Lato", sans-serif;
 }
 header {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  align-items: center;
+  padding: 10px 70px;
 }
 .mihealth {
-  padding: 20px;
+  font-weight: 900;
+  font-size: x-large;
 }
 ul {
   display: flex;
   list-style-type: none;
 }
 li {
-  padding: 10px;
+  font-size: large;
 }
 a {
   color: black;
   text-decoration: none;
+  padding-left: 30px;
 }
 main {
   display: flex;
